--- a/trash2trade-frontend/index.html
+++ b/trash2trade-frontend/index.html
@@ -2,9 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+
+    <!-- ✅ Favicon (no Vite logo) -->
+    <link rel="icon" type="image/png" href="/favicon.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>trash2trade</title>
+
+    <!-- ✅ Clean professional title -->
+    <title>Trash2Trade | Circular Economy Marketplace</title>
   </head>
   <body>
     <div id="root"></div>
